--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.pnp
 .pnp.js
 
+/public
+
 # testing
 /coverage
 
@@ -21,3 +23,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+node_modules
+dist
+packages
+.webpack
+out
+package-lock.json
+dist
+/coverage/*
